RESOLVED FIXED171392
testWasmBoundsCheck and testCallFunctionWithHellaArguments is broken in testb3
https://bugs.webkit.org/show_bug.cgi?id=171392
Summary testWasmBoundsCheck and testCallFunctionWithHellaArguments is broken in testb3
Saam Barati
Reported 2017-04-27 13:59:04 PDT
...
Attachments
patch (117.92 KB, patch)
2017-05-08 16:25 PDT, Saam Barati
no flags
Radar WebKit Bug Importer
Comment 1 2017-04-27 14:00:55 PDT
Saam Barati
Comment 2 2017-05-08 14:24:11 PDT
*** Bug 171767 has been marked as a duplicate of this bug. ***
Saam Barati
Comment 3 2017-05-08 16:25:14 PDT
Build Bot
Comment 4 2017-05-08 16:28:15 PDT
Attachment 309438 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/b3/testb3.cpp:10406: l is incorrectly named. Don't use the single letter 'l' as an identifier name. [readability/naming] [4] ERROR: Source/JavaScriptCore/b3/testb3.cpp:10434: Missing space after , [whitespace/comma] [3] ERROR: Source/JavaScriptCore/b3/testb3.cpp:10453: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3.cpp:10455: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3.cpp:10457: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3.cpp:10459: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] Total errors found: 6 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Keith Miller
Comment 5 2017-05-08 16:30:44 PDT
Comment on attachment 309438 [details] patch r=me. Wow, that's a lot of failing ARM tests :(
Saam Barati
Comment 6 2017-05-08 16:31:48 PDT
(In reply to Keith Miller from comment #5) > Comment on attachment 309438 [details] > patch > > r=me. Wow, that's a lot of failing ARM tests :( Yeah. There appeared to be a lot of repetition in the failures, but I didn't investigate any of them.
WebKit Commit Bot
Comment 7 2017-05-08 18:35:25 PDT
Comment on attachment 309438 [details] patch Clearing flags on attachment: 309438 Committed r216468: <http://trac.webkit.org/changeset/216468>
WebKit Commit Bot
Comment 8 2017-05-08 18:35:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.